--- a/EpidemicSim_GUI/Review/Panels/ReviewSettingsPanel.resx
+++ b/EpidemicSim_GUI/Review/Panels/ReviewSettingsPanel.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="TextBox_Hint.Text" xml:space="preserve">
+    <value>Hint: There are two types of diagrams: The first is the 'age-diagram' which shows the amount of people of each agegroup on each snapshot. The second is an alternative diagram which shows the amount of infected, diseased and all humans respectively.</value>
+  </data>
   <metadata name="DestinationFolderBrowserDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
